2014-数据结构算法题-计算二叉树的WPL

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,8 @@ add_executable(408_algorithm
         2019/solution.h
         2012/solution.cpp
         2012/solution.h
+        2014/solution.cpp
+        2014/solution.h
 )
 
 add_executable(binary_search
