--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,8 @@ add_executable(408_algorithm
         2012/solution.h
         2014/solution.cpp
         2014/solution.h
+        2015/solution.cpp
+        2015/solution.h
 )
 
 add_executable(binary_search
